added statistics added test quest and users change style final of project